[gd_scene load_steps=9 format=2]

[ext_resource path="res://items/CraftItems/Stupka.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Craft/Stupka.gd" type="Script" id=2]
[ext_resource path="res://items/UI/Stupka-back.png" type="Texture" id=3]
[ext_resource path="res://items/UI/Menu-plashka.png" type="Texture" id=4]
[ext_resource path="res://Scripts/ItemsMenuCraft.gd" type="Script" id=5]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/DefaultFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/Buttons/SceneButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/MenuCraftStupka.gd" type="Script" id=8]

[node name="Stupka" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 14, 15 )
texture = ExtResource( 1 )

[node name="Menu" type="Control" parent="."]
visible = false
margin_left = -185.0
margin_top = -821.0
margin_right = 1003.0
margin_bottom = -327.0
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -495.0
margin_top = -204.0
margin_right = 423.0
margin_bottom = 235.0

[node name="ItemsMenu" type="ScrollContainer" parent="Menu/Panel"]
margin_left = 537.0
margin_top = 9.0
margin_right = 899.0
margin_bottom = 348.0
scroll_horizontal_enabled = false
script = ExtResource( 5 )

[node name="Grid" type="GridContainer" parent="Menu/Panel/ItemsMenu"]
margin_right = 360.0
margin_bottom = 350.0
rect_min_size = Vector2( 360, 350 )

[node name="ColorRect" type="ColorRect" parent="Menu/Panel/ItemsMenu/Grid"]
margin_right = 360.0
margin_bottom = 340.0
rect_min_size = Vector2( 360, 340 )
color = Color( 0.180392, 0.388235, 0.243137, 0.666667 )

[node name="ItemList" type="ItemList" parent="Menu/Panel/ItemsMenu/Grid/ColorRect"]
margin_left = 10.0
margin_top = 6.0
margin_right = 352.0
margin_bottom = 332.0
size_flags_horizontal = 0
custom_constants/vseparation = 15
custom_constants/line_separation = 5
custom_constants/icon_margin = 5
custom_constants/hseparation = 5
items = [ "Romashka", null, false, "Sera", null, false ]
icon_mode = 0

[node name="TextureRect" type="TextureRect" parent="Menu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -438.0
margin_top = 131.0
margin_right = 62.0
margin_bottom = 851.0
rect_rotation = -90.1404
rect_scale = Vector2( 0.659281, 0.62761 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Menu/Panel"]
position = Vector2( 257, 195.5 )
rotation = 3.13959
scale = Vector2( 0.310574, -0.290024 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Menu/Panel/Sprite"]
modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
margin_left = -129.181
margin_top = -206.603
margin_right = 143.819
margin_bottom = 68.3975
color = Color( 0.392157, 0.337255, 0.337255, 0.745098 )

[node name="Buttons" type="HBoxContainer" parent="Menu/Panel"]
margin_left = 14.0
margin_top = 369.0
margin_right = 903.0
margin_bottom = 432.0
custom_constants/separation = 90

[node name="Craft" parent="Menu/Panel/Buttons" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 150.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.0509804, 0.741176, 0.345098, 1 )
custom_constants/hseparation = -5
custom_fonts/font = ExtResource( 6 )
text = "Перемолоть"

[node name="TakeAtanor" parent="Menu/Panel/Buttons" instance=ExtResource( 7 )]
margin_left = 240.0
margin_top = 0.0
margin_right = 401.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.0509804, 0.741176, 0.345098, 1 )
custom_constants/hseparation = -5
custom_fonts/font = ExtResource( 6 )
text = "Убрать в атанор"

[node name="TakeScale" parent="Menu/Panel/Buttons" instance=ExtResource( 7 )]
margin_left = 491.0
margin_top = 0.0
margin_right = 641.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.0509804, 0.741176, 0.345098, 1 )
custom_constants/hseparation = -5
custom_fonts/font = ExtResource( 6 )
text = "Взвесить"

[node name="Return" parent="Menu/Panel/Buttons" instance=ExtResource( 7 )]
margin_left = 731.0
margin_top = 0.0
margin_right = 881.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.0509804, 0.741176, 0.345098, 1 )
custom_constants/hseparation = -5
custom_fonts/font = ExtResource( 6 )
text = "Вернуться"
